Closed
Bug 1634145
Opened 5 years ago
Closed 5 years ago
nr_ice_socket can be leaked on some types of error
Categories
(Core :: WebRTC: Networking, defect, P2)
Core
WebRTC: Networking
Tracking
()
RESOLVED
FIXED
mozilla78
People
(Reporter: bwc, Assigned: bwc)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
nr_ice_sockets are owned by nr_ice_component, but there are several kinds of failure that can happen between when an nr_ice_socket is created, and when they are registered with the nr_ice_component that is supposed to own them.
| Assignee | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Severity: -- → S3
| Assignee | ||
Updated•5 years ago
|
status-firefox75:
--- → affected
status-firefox76:
--- → affected
status-firefox77:
--- → affected
status-firefox78:
--- → affected
status-firefox-esr68:
--- → affected
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b3e03d6aa78d
Avoid leaking nr_ice_sockets due to various kinds of failure. r=mjf
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Comment 5•5 years ago
|
||
The patch landed in nightly and beta is affected.
:bwc, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
Flags: needinfo?(docfaraday)
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9144717 [details]
Bug 1634145: Avoid leaking nr_ice_sockets due to various kinds of failure. r?mjf
Beta/Release Uplift Approval Request
- User impact if declined: Potential memory leaks when using webrtc.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just a leak fix, pretty straightforward.
- String changes made/needed: None.
Attachment #9144717 -
Flags: approval-mozilla-beta?
Updated•5 years ago
|
Comment 8•5 years ago
|
||
Comment on attachment 9144717 [details]
Bug 1634145: Avoid leaking nr_ice_sockets due to various kinds of failure. r?mjf
Low risk leak fix in webrtc, uplift approved for beta, thanks!
Attachment #9144717 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•5 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•