Bug 1634145: Avoid leaking nr_ice_sockets due to various kinds of failure. r=mjf, a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D73287